dublin-coach-backend/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "17"
  creationTimestamp: 2018-01-23T15:30:46Z
  generation: 19
  labels:
    run: dublin-coach-backend
  name: dublin-coach-backend
  namespace: default
  resourceVersion: "4435095"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/dublin-coach-backend
  uid: 61eaa75e-0052-11e8-8307-42010af00188
spec:
  replicas: 1
  selector:
    matchLabels:
      run: dublin-coach-backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: dublin-coach-backend
    spec:
      containers:
      - image: eu.gcr.io/dublin-coach-123/dublin-coach-backend:0.67
        imagePullPolicy: IfNotPresent
        name: dublin-coach-backend
        ports:
        - containerPort: 3000
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-01-23T15:30:46Z
    lastUpdateTime: 2018-01-23T15:30:46Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 19
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
